--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title>Medilife - Health &amp; Medical Template | Home</title>
+    <title> Sotelo & Sotelo</title>
 
     <!-- Favicon  -->
     <link rel="icon" href="img/core-img/favicon.ico.ico">
@@ -33,7 +33,7 @@
                 <div class="row h-100">
                     <div class="col-12 h-100">
                         <div class="h-100 d-md-flex justify-content-between align-items-center">
-                            <p>Welcome to <span>Medifile</span> template</p>
+                            <p>Bienvenido a  <span>Sotelo & Sotelo</span> CIA</p>
                             <p>Opening Hours : Monday to Saturday - 8am to 10pm Contact : <span>+12-823-611-8721</span></p>
                         </div>
                     </div>
@@ -495,40 +495,44 @@
                 <div class="col-12 col-lg-6">
                     <div class="emergency-content">
                         <i class="icon-smartphone"></i>
-                        <h2>For Emergency calls</h2>
-                        <h3>+12-823-611-8721</h3>
+                        <h2>Contacto unicamente para </br> servicios de Medicina Prepagada</h2>
+                        <!--<h3>57(1) 2185987 - 3591087</h3>-->
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
                     <div class="row">
                         <!-- Single Emergency Helpline -->
-                        <div class="col-12 col-sm-6">
+                        <div class="col-9 col-sm-5">
                             <div class="single-emergency-helpline mb-50">
-                                <h5>London</h5>
-                                <p>0080 673 729 766 <br> contact@business.com <br> Lamas Str, no 14-18 <br> 41770 Miami</p>
+                              <br>
+                                <h5>Sotelo y Sotelo Cia. Ltda</h5>
+                                <p>+57(1) 2185987 - 3591087
+                                  <br> contactanos@soteloysotelo.com
+                                  <br> Carrera 13 No. 32 - 93 Torre III
+                                  <br> Oficina 902
+                                </p>
                             </div>
                         </div>
                         <!-- Single Emergency Helpline -->
                         <div class="col-12 col-sm-6">
                             <div class="single-emergency-helpline mb-50">
-                                <h5>New Castle</h5>
-                                <p>0080 673 729 766 <br> contact@business.com <br> Lamas Str, no 14-18 <br> 41770 Miami</p>
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.8532737586584!2d-74.07063248588761!3d4.620253296643606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f99844bc67a1b%3A0xe4dbfb14cb98abfa!2sCra.+13+%2332-93%2C+Bogot%C3%A1%2C+Cundinamarca!5e0!3m2!1ses-419!2sco!4v1538530750213" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                             </div>
                         </div>
-                        <!-- Single Emergency Helpline -->
+                      <!--  <!-- Single Emergency Helpline Direcciones para modificacion
                         <div class="col-12 col-sm-6">
                             <div class="single-emergency-helpline mb-50">
                                 <h5>Manchester</h5>
                                 <p>0080 673 729 766 <br> contact@business.com <br> Lamas Str, no 14-18 <br> 41770 Miami</p>
                             </div>
-                        </div>
-                        <!-- Single Emergency Helpline -->
+                        </div>-->
+                        <!-- Single Emergency Helpline
                         <div class="col-12 col-sm-6">
                             <div class="single-emergency-helpline mb-50">
                                 <h5>Bristol</h5>
                                 <p>0080 673 729 766 <br> contact@business.com <br> Lamas Str, no 14-18 <br> 41770 Miami</p>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
             </div>
@@ -550,9 +554,9 @@
                             </div>
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer.</p>
                             <div class="footer-social-info">
-                                <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                                <a href=""><i class="fa fa-google-plus" aria-hidden="true"></i></a>
                                 <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
-                                <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                <a href="https://www.facebook.com/AgenciaSoteloySotelo/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                                 <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                             </div>
                         </div>
