--- a/about-us.html
+++ b/about-us.html
@@ -9,10 +9,10 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title>Medilife - Health &amp; Medical Template | About Us</title>
+    <title>Sotelo & Sotelo</title>
 
     <!-- Favicon  -->
-    <link rel="icon" href="img/core-img/favicon.ico">
+    <link rel="icon" href="img/core-img/favicon.ico.ico">
 
     <!-- Style CSS -->
     <link rel="stylesheet" href="style.css">
@@ -63,7 +63,7 @@
                                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
                                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                                 <a class="dropdown-item" href="index.html">Home</a>
-                                                <a class="dropdown-item" href="about-us.html">About Us</a>
+                                                <a class="dropdown-item" href="about-us.html">Nosotros</a>
                                                 <a class="dropdown-item" href="services.html">Services</a>
                                                 <a class="dropdown-item" href="blog.html">News</a>
                                                 <a class="dropdown-item" href="single-blog.html">News Details</a>
@@ -73,7 +73,7 @@
                                             </div>
                                         </li>
                                         <li class="nav-item active">
-                                            <a class="nav-link" href="about-us.html">About Us</a>
+                                            <a class="nav-link" href="about-us.html">Nosotros</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="services.html">Services</a>
@@ -103,7 +103,7 @@
             <div class="row h-100 align-items-center">
                 <div class="col-12">
                     <div class="breadcumb-content">
-                        <h3 class="breadcumb-title">About us</h3>
+                        <h3 class="breadcumb-title">Nosotros</h3>
                         <p>Lorem ipsum dolor sit amet, consectetuer</p>
                     </div>
                 </div>
@@ -118,9 +118,8 @@
             <div class="row align-items-center">
                 <div class="col-12 col-lg-6">
                     <div class="features-content">
-                        <h2>We always put our pacients first</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing eli.Lorem ipsum dolor sit amet, consec tetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer.</p>
-                        <a href="#" class="btn medilife-btn mt-50">View the services <span>+</span></a>
+                        <h2>Sotelo y Sotelo y Cia. Ltda</h2>
+                        <p>Nace como agencia exclusiva de la Organización Sanitas Internacional en 1989 a iniciativa del señor Santos Gustavo Sotelo Alfonso, apoyado por su señora esposa, en respuesta de las necesidades del mercado de medicina prepagada.</p>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
@@ -131,25 +130,52 @@
             </div>
         </div>
     </div>
+
+    <!--duplicación-->
+    <div class="medilife-features-area section-padding-100">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-12 col-lg-12">
+                    <div class="features-content">
+                        <h2>Misión</h2>
+                        <p>Satisfacer las necesidades de los usuarios de Medicina Prepagada, afiliados y colaboradores, a través de los planes de salud ofrecidos por la Organización Sanitas Internacional y de la gestión de nuestro servicio, trabajamos con honestidad en beneficio de generar valor en nuestras relaciones garantizando satisfacción y confianza en el trabajo que hacemos como compañía intermediadora.</p>
+                        <h2>Visión</h2>
+                        <p>Somos una de las agencias líderes en la promoción y sostenimiento de usuarios de los productos de salud de la Organización Sanitas Internacional.</p>
+                        <!--<a href="#" class="btn medilife-btn mt-50">View the services <span>+</span></a>-->
+                    </div>
+                </div>
+              <!--  <div class="col-12 col-lg-6">
+                    <div class="features-thumbnail">
+                        <img src="img/bg-img/about1.jpg" alt="">
+                    </div>
+                </div>-->
+            </div>
+        </div>
+    </div>
     <!-- ***** Features Area End ***** -->
 
     <!-- ***** Video Area Start ***** -->
     <section class="medilife-video-area section-padding-100 bg-overlay bg-img" style="background-image: url(img/bg-img/video.jpg);">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-12 col-lg-8">
-                    <div class="video-box bg-overlay-black">
-                        <img src="img/bg-img/video2.jpg" alt="">
+                <div class="col-12 col-lg-6">
+                  <div class="video-content">
+                    <!--<div class="video-box bg-overlay-black">-->
+                      <!--  <img src="img/bg-img/video2.jpg" alt="">
                         <div class="play-btn">
                             <a class="popup-video" href="http://www.youtube.com/watch?v=0O2aH4XLbto"><img src="img/core-img/play.png" alt=""></a>
                             <h6>A day at Medilife-Video</h6>
+                        </div>-->
+                        <div class="video-content">
+                          <h2>Misión</h2>
+                          <p>Satisfacer las necesidades de los usuarios de Medicina Prepagada, afiliados y colaboradores, a través de los planes de salud ofrecidos por la Organización Sanitas Internacional y de la gestión de nuestro servicio, trabajamos con honestidad en beneficio de generar valor en nuestras relaciones garantizando satisfacción y confianza en el trabajo que hacemos como compañía intermediadora.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-4">
+                <div class="col-12 col-lg-6">
                     <div class="video-content">
-                        <h2>A day at Medilife -Video</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing eli. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                      <h2>Visión</h2>
+                      <p>Somos una de las agencias líderes en la promoción y sostenimiento de usuarios de los productos de salud de la Organización Sanitas Internacional.</p>
                     </div>
                 </div>
             </div>
@@ -158,7 +184,7 @@
     <!-- ***** Video Area End ***** -->
 
     <!-- ***** Skilss Area Start ***** -->
-    <section class="our-skills-area text-center section-padding-100-0">
+    <!--<section class="our-skills-area text-center section-padding-100-0">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-sm-6 col-md-3 col-lg-2">
@@ -205,7 +231,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
     <!-- ***** Skills Area End ***** -->
 
     <!-- ***** Tabs Area Start ***** -->
@@ -216,23 +242,23 @@
                     <div class="medilife-tabs-content">
                         <ul class="nav nav-tabs" id="myTab" role="tablist">
                             <li class="nav-item">
-                                <a class="nav-link" id="institution-tab" data-toggle="tab" href="#institution" role="tab" aria-controls="institution" aria-selected="false">Institution</a>
+                                <a class="nav-link" id="institution-tab" data-toggle="tab" href="#institution" role="tab" aria-controls="institution" aria-selected="false">Integridad</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="faq-tab" data-toggle="tab" href="#faq" role="tab" aria-controls="faq" aria-selected="false">FAQ</a>
+                                <a class="nav-link" id="faq-tab" data-toggle="tab" href="#faq" role="tab" aria-controls="faq" aria-selected="false">Respeto muto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" id="specialities-tab" data-toggle="tab" href="#specialities" role="tab" aria-controls="specialities" aria-selected="true">Specialities</a>
+                                <a class="nav-link active" id="specialities-tab" data-toggle="tab" href="#specialities" role="tab" aria-controls="specialities" aria-selected="true">Confianza</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="laboratory-tab" data-toggle="tab" href="#laboratory" role="tab" aria-controls="laboratory" aria-selected="false">Laboratory</a>
+                                <a class="nav-link" id="laboratory-tab" data-toggle="tab" href="#laboratory" role="tab" aria-controls="laboratory" aria-selected="false">Oportunidad</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="emergencies-tab" data-toggle="tab" href="#emergencies" role="tab" aria-controls="emergencies" aria-selected="false">Emergencies</a>
+                                <a class="nav-link" id="emergencies-tab" data-toggle="tab" href="#emergencies" role="tab" aria-controls="emergencies" aria-selected="false">Mejora Continua</a>
                             </li>
-                            <li class="nav-item">
+                            <!--<li class="nav-item">
                                 <a class="nav-link" id="scolarship-tab" data-toggle="tab" href="#scolarship" role="tab" aria-controls="scolarship" aria-selected="false">Scolarship Programs</a>
-                            </li>
+                            </li>-->
                         </ul>
 
                         <div class="tab-content" id="myTabContent">
@@ -240,8 +266,8 @@
                                 <div class="medilife-tab-content d-md-flex align-items-center">
                                     <!-- Medilife Tab Text  -->
                                     <div class="medilife-tab-text">
-                                        <h2>Take a look at this</h2>
-                                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing eli. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing eli sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing eli.</p>
+                                        <h2>Integridad</h2>
+                                        <p>La integridad implica ser fiel a las propias convicciones. Es “hacer lo correcto”, entendido como actuar con honestidad, rectitud, respeto y responsabilidad, cumpliendo con nuestros deberes y obligaciones, conforme a nuestra Razón de ser. La integridad es buscar la unidad de la persona entre lo que piensa, siente, dice y hace, de acuerdo con el bien que dicta la conciencia y la ética.</p>
                                     </div>
                                     <!-- Medilife Tab Img  -->
                                     <div class="medilife-tab-img">
@@ -253,8 +279,8 @@
                                 <div class="medilife-tab-content d-md-flex align-items-center">
                                     <!-- Medilife Tab Text  -->
                                     <div class="medilife-tab-text">
-                                        <h2>Take a look at this</h2>
-                                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing eli. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing eli sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing eli.</p>
+                                        <h2>Respeto muto</h2>
+                                        <p>Reconocemos el valor de la igual dignidad de la vida de todas y cada una de las personas, su unicidad, su diversidad, sus dimensiones individuales y sociales. Entendemos que respetar es actuar o dejar de actuar, procurando no perjudicar ni dejar de beneficiarse a sí mismo ni a los demás, de acuerdo con sus derechos, su condición y sus circunstancias. Así como tenemos el derecho a ser respetados, hemos de cumplir con el deber de respetar a las otras personal, sentando las bases para la convivencia, el diálogo y la colaboración.</p>
                                     </div>
                                     <!-- Medilife Tab Img  -->
                                     <div class="medilife-tab-img">
@@ -266,8 +292,8 @@
                                 <div class="medilife-tab-content d-md-flex align-items-center">
                                     <!-- Medilife Tab Text  -->
                                     <div class="medilife-tab-text">
-                                        <h2>Take a look at this</h2>
-                                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing eli. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing eli sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing eli.</p>
+                                        <h2>Confianza</h2>
+                                        <p>Sentimiento de credibilidad construido y generado por la organización frente a sus afiliados, usuarios y colaboradores, se construye a través de la labor realizada con excelencia, obteniendo los resultados esperados, proporcionando tranquilidad al cumplir con los compromisos de manera adecuada.</p>
                                     </div>
                                     <!-- Medilife Tab Img  -->
                                     <div class="medilife-tab-img">
@@ -279,8 +305,8 @@
                                 <div class="medilife-tab-content d-md-flex align-items-center">
                                     <!-- Medilife Tab Text  -->
                                     <div class="medilife-tab-text">
-                                        <h2>Take a look at this</h2>
-                                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing eli. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing eli sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing eli.</p>
+                                        <h2>Oportunidad</h2>
+                                        <p>Entendemos que para nuestros usuarios es importante contar con cierta información y servicios en un momento determinado. Por tanto actuar en el momento propicio, siendo diligentes en los procesos y comunicar los resultados a tiempo forman parte del deber ser de cada uno de nuestros colaboradores.</p>
                                     </div>
                                     <!-- Medilife Tab Img  -->
                                     <div class="medilife-tab-img">
@@ -292,8 +318,8 @@
                                 <div class="medilife-tab-content d-md-flex align-items-center">
                                     <!-- Medilife Tab Text  -->
                                     <div class="medilife-tab-text">
-                                        <h2>Take a look at this</h2>
-                                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing eli. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing eli sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing eli.</p>
+                                        <h2>Mejora Continua</h2>
+                                        <p>Cada colaborador tiene la capacidad para buscar y promover permanentemente el logro de resultados de excelencia en procesos, y servicios. Implica la capacidad para administrar de modo eficiente los bienes y recursos organizacionales de los cuales se dispone para el desarrollo de sus tareas.</p>
                                     </div>
                                     <!-- Medilife Tab Img  -->
                                     <div class="medilife-tab-img">
