--- a/contact.html
+++ b/contact.html
@@ -9,10 +9,10 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title>Medilife - Health &amp; Medical Template | Contact</title>
+    <title>Sotelo & Sotelo</title>
 
     <!-- Favicon  -->
-    <link rel="icon" href="img/core-img/favicon.ico">
+    <link rel="icon" href="img/core-img/favicon.ico.ico">
 
     <!-- Style CSS -->
     <link rel="stylesheet" href="style.css">
@@ -33,7 +33,7 @@
                 <div class="row h-100">
                     <div class="col-12 h-100">
                         <div class="h-100 d-md-flex justify-content-between align-items-center">
-                            <p>Welcome to <span>Medifile</span> template</p>
+                            <p>Bienvenido a <span>Sotelo & Sotelo</span></p>
                             <p>Opening Hours : Monday to Saturday - 8am to 10pm Contact : <span>+12-823-611-8721</span></p>
                         </div>
                     </div>
@@ -49,7 +49,7 @@
                         <div class="main-menu h-100">
                             <nav class="navbar h-100 navbar-expand-lg">
                                 <!-- Logo Area  -->
-                                <a class="navbar-brand" href="index.html"><img src="img/core-img/logo.png" alt="Logo"></a>
+                                <a class="navbar-brand" href="index.html"><img src="img/core-img/plus.png" alt="Logo"></a>
 
                                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#medilifeMenu" aria-controls="medilifeMenu" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 
@@ -67,7 +67,7 @@
                                                 <a class="dropdown-item" href="services.html">Services</a>
                                                 <a class="dropdown-item" href="blog.html">News</a>
                                                 <a class="dropdown-item" href="single-blog.html">News Details</a>
-                                                <a class="dropdown-item" href="contact.html">Contact</a>
+                                                <a class="dropdown-item" href="contact.html">Contactenos</a>
                                                 <a class="dropdown-item" href="elements.html">Elements</a>
                                                 <a class="dropdown-item" href="index-icons.html">All Icons</a>
                                             </div>
@@ -103,7 +103,7 @@
             <div class="row h-100 align-items-center">
                 <div class="col-12">
                     <div class="breadcumb-content">
-                        <h3 class="breadcumb-title">Contact</h3>
+                        <h3 class="breadcumb-title">Contactenos</h3>
                         <p>Lorem ipsum dolor sit amet, consectetuer</p>
                     </div>
                 </div>
@@ -118,19 +118,19 @@
                 <!-- Contact Form Area -->
                 <div class="col-12 col-lg-8">
                     <div class="contact-form">
-                        <h5 class="mb-50">Get in touch</h5>
+                        <h5 class="mb-50">Envianos un correo</h5>
 
                         <form action="#" method="post">
                             <div class="form-group">
-                                <input type="text" class="form-control" id="contact-name" placeholder="Name">
+                                <input type="text" class="form-control" id="contact-name" placeholder="Nombre">
                             </div>
                             <div class="form-group">
-                                <input type="email" class="form-control" id="contact-email" placeholder="Email">
+                                <input type="email" class="form-control" id="contact-email" placeholder="Correo electrónico">
                             </div>
                             <div class="form-group">
-                                <textarea class="form-control" name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
+                                <textarea class="form-control" name="message" id="message" cols="30" rows="10" placeholder="Mensaje"></textarea>
                             </div>
-                            <button type="submit" class="btn medilife-btn">Send Message <span>+</span></button>
+                            <button type="submit" class="btn medilife-btn">Enviar <span>+</span></button>
                         </form>
                     </div>
                 </div>
@@ -147,7 +147,8 @@
                                     <i class="icon-doctor"></i>
                                 </div>
                                 <div class="contact-meta">
-                                    <p>Address: 1481 Creekside Lane Avila <br>Beach, CA 93424 </p>
+                                    <p>Dirección: Carrera 13 No. 32 - 93  <br>Torre III
+Oficina 902 </p>
                                 </div>
                             </div>
 
@@ -156,7 +157,7 @@
                                     <i class="icon-doctor"></i>
                                 </div>
                                 <div class="contact-meta">
-                                    <p>Phone: +53 345 7953 32453</p>
+                                    <p>Teléfono: +57 (1) 2185987 - 3591087 </p>
                                 </div>
                             </div>
 
@@ -165,7 +166,7 @@
                                     <i class="icon-doctor"></i>
                                 </div>
                                 <div class="contact-meta">
-                                    <p>Email: yourmail@gmail.com</p>
+                                    <p>Correo electrónico: contactanos@soteloysotelo.com</p>
                                 </div>
                             </div>
 
@@ -178,13 +179,13 @@
                             </div>
 
                         </div>
-                        
+
 
                         <!-- medilife Emergency Card -->
                         <div class="medilife-emergency-card bg-img bg-overlay" style="background-image: url(img/bg-img/about1.jpg);">
                             <i class="icon-smartphone"></i>
-                            <h2>For Emergency calls</h2>
-                            <h3>+12-823-611-8721</h3>
+                            <h2>Para Emergencias</h2>
+                            <h3>+57 (1) 2185987</h3>
                         </div>
                     </div>
                 </div>
@@ -197,7 +198,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div id="googleMap" class="googleMap"></div>
+                  <iframe id="googleMap" class="googleMap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.8532737586584!2d-74.07063248588761!3d4.620253296643606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f99844bc67a1b%3A0xe4dbfb14cb98abfa!2sCra.+13+%2332-93%2C+Bogot%C3%A1%2C+Cundinamarca!5e0!3m2!1ses-419!2sco!4v1538530750213" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
                 </div>
             </div>
         </div>
