--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                                 <a class="dropdown-item" href="services.html">Services</a>
                                                 <a class="dropdown-item" href="blog.html">News</a>
                                                 <a class="dropdown-item" href="single-blog.html">News Details</a>
-                                                <a class="dropdown-item" href="contact.html">Contact</a>
+                                                <a class="dropdown-item" href="contact.html">Contactenos</a>
                                                 <a class="dropdown-item" href="elements.html">Elements</a>
                                                 <a class="dropdown-item" href="index-icons.html">All Icons</a>
                                             </div>
@@ -152,9 +152,9 @@
             <div class="row">
                 <div class="col-12">
                     <div class="appointment-form-content">
-                        <div class="row no-gutters align-items-center">
+                        <!--<div class="row no-gutters align-items-center">
                             <div class="col-12 col-lg-9">
-                                <div class="medilife-appointment-form">
+                               <div class="medilife-appointment-form">
                                     <form action="#" method="post">
                                         <div class="row align-items-end">
                                             <div class="col-12 col-md-4">
@@ -221,23 +221,23 @@
                             <div class="col-12 col-lg-3">
                                 <div class="medilife-contact-info">
                                     <!-- Single Contact Info -->
-                                    <div class="single-contact-info mb-30">
+                                   <!--<div class="single-contact-info mb-30">
                                         <img src="img/icons/alarm-clock.png" alt="">
                                         <p>Mon - Sat 08:00 - 21:00 <br>Sunday CLOSED</p>
                                     </div>
                                     <!-- Single Contact Info -->
-                                    <div class="single-contact-info mb-30">
+                                <!--   <div class="single-contact-info mb-30">
                                         <img src="img/icons/envelope.png" alt="">
                                         <p>0080 673 729 766 <br>contact@business.com</p>
                                     </div>
                                     <!-- Single Contact Info -->
-                                    <div class="single-contact-info">
+                                  <!--  <div class="single-contact-info">
                                         <img src="img/icons/map-pin.png" alt="">
                                         <p>Lamas Str, no 14-18 <br>41770 Miami</p>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
             </div>
