se modifica la solicitud de andres
se modifica la solicitud de andres

--- a/about-us.html
+++ b/about-us.html
@@ -135,27 +135,28 @@
     <div class="medilife-features-area section-padding-100">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-12 col-lg-12">
+                <div class="col-12 col-lg-6">
                     <div class="features-content">
                         <h2>Misión</h2>
                         <p>Satisfacer las necesidades de los usuarios de Medicina Prepagada, afiliados y colaboradores, a través de los planes de salud ofrecidos por la Organización Sanitas Internacional y de la gestión de nuestro servicio, trabajamos con honestidad en beneficio de generar valor en nuestras relaciones garantizando satisfacción y confianza en el trabajo que hacemos como compañía intermediadora.</p>
-                        <h2>Visión</h2>
-                        <p>Somos una de las agencias líderes en la promoción y sostenimiento de usuarios de los productos de salud de la Organización Sanitas Internacional.</p>
+                        <img src="img/bg-img/about1.jpg" alt="">
                         <!--<a href="#" class="btn medilife-btn mt-50">View the services <span>+</span></a>-->
                     </div>
                 </div>
-              <!--  <div class="col-12 col-lg-6">
+               <div class="col-12 col-lg-6">
                     <div class="features-thumbnail">
                         <img src="img/bg-img/about1.jpg" alt="">
+                        <h2>Visión</h2>
+                        <p>Somos una de las agencias líderes en la promoción y sostenimiento de usuarios de los productos de salud de la Organización Sanitas Internacional.</p>
                     </div>
-                </div>-->
+                </div>
             </div>
         </div>
     </div>
     <!-- ***** Features Area End ***** -->
 
     <!-- ***** Video Area Start ***** -->
-    <section class="medilife-video-area section-padding-100 bg-overlay bg-img" style="background-image: url(img/bg-img/video.jpg);">
+  <!--   <section class="medilife-video-area section-padding-100 bg-overlay bg-img" style="background-image: url(img/bg-img/video.jpg);">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-12 col-lg-6">
@@ -166,7 +167,7 @@
                             <a class="popup-video" href="http://www.youtube.com/watch?v=0O2aH4XLbto"><img src="img/core-img/play.png" alt=""></a>
                             <h6>A day at Medilife-Video</h6>
                         </div>-->
-                        <div class="video-content">
+                      <!--   <div class="video-content">
                           <h2>Misión</h2>
                           <p>Satisfacer las necesidades de los usuarios de Medicina Prepagada, afiliados y colaboradores, a través de los planes de salud ofrecidos por la Organización Sanitas Internacional y de la gestión de nuestro servicio, trabajamos con honestidad en beneficio de generar valor en nuestras relaciones garantizando satisfacción y confianza en el trabajo que hacemos como compañía intermediadora.</p>
                         </div>
