--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
                                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                                 <a class="dropdown-item" href="index.html">Home</a>
-                                                <a class="dropdown-item" href="about-us.html">About Us</a>
+                                                <a class="dropdown-item" href="about-us.html">Nosotros</a>
                                                 <a class="dropdown-item" href="services.html">Services</a>
                                                 <a class="dropdown-item" href="blog.html">News</a>
                                                 <a class="dropdown-item" href="single-blog.html">News Details</a>
@@ -185,7 +185,8 @@ Oficina 902 </p>
                         <div class="medilife-emergency-card bg-img bg-overlay" style="background-image: url(img/bg-img/about1.jpg);">
                             <i class="icon-smartphone"></i>
                             <h2>Para Emergencias</h2>
-                            <h3>+57 (1) 2185987</h3>
+                            <h3>+57 (1) 2185987</h3><br>
+                            <h3>3591087</h3>
                         </div>
                     </div>
                 </div>
@@ -215,13 +216,13 @@ Oficina 902 </p>
                     <div class="col-12 col-sm-6 col-xl-3">
                         <div class="footer-widget-area">
                             <div class="footer-logo">
-                                <img src="img/core-img/logo.png" alt="">
+                                <img src="img/core-img/plus.png" alt="">
                             </div>
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer.</p>
                             <div class="footer-social-info">
                                 <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
                                 <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
-                                <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                <a href="https://www.facebook.com/AgenciaSoteloySotelo/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                                 <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                             </div>
                         </div>
