--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
                                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                                 <a class="dropdown-item" href="index.html">Home</a>
-                                                <a class="dropdown-item" href="about-us.html">About Us</a>
+                                                <a class="dropdown-item" href="about-us.html">Nosotros</a>
                                                 <a class="dropdown-item" href="services.html">Services</a>
                                                 <a class="dropdown-item" href="blog.html">News</a>
                                                 <a class="dropdown-item" href="single-blog.html">News Details</a>
@@ -550,7 +550,7 @@
                     <div class="col-12 col-sm-6 col-xl-3">
                         <div class="footer-widget-area">
                             <div class="footer-logo">
-                                <img src="img/core-img/logo.1.png" alt="">
+                                <img src="img/core-img/plus.png" alt="">
                             </div>
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer.</p>
                             <div class="footer-social-info">
