--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
     <title>Sotelo & Sotelo</title>
 
     <!-- Favicon  -->
-    <link rel="icon" href="img/core-img/favicon.ico">
+    <link rel="icon" href="img/core-img/favicon.ico.ico">
 
     <!-- Style CSS -->
     <link rel="stylesheet" href="style.css">
@@ -33,7 +33,7 @@
                 <div class="row h-100">
                     <div class="col-12 h-100">
                         <div class="h-100 d-md-flex justify-content-between align-items-center">
-                            <p>Welcome to <span>Medifile</span> template</p>
+                            <p>Bienvenido a <span>Sotelo & Sotelo</span> CIA</p>
                             <p>Opening Hours : Monday to Saturday - 8am to 10pm Contact : <span>+12-823-611-8721</span></p>
                         </div>
                     </div>
@@ -311,7 +311,7 @@
                     <div class="col-12 col-sm-6 col-xl-3">
                         <div class="footer-widget-area">
                             <div class="footer-logo">
-                                <img src="img/core-img/logo.1.png" alt="">
+                                <img src="img/core-img/plus.png" alt="">
                             </div>
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer.</p>
                             <div class="footer-social-info">
